[package]
name = "MacroDSL"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "macro_dsl"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "macro_dsl_native"
path = "src/bin/macro_dsl_native.rs"

[dependencies]
